--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -109,8 +109,6 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
 
@@ -136,13 +134,13 @@
     });
   </script>
   <script>
-    // // Check that service workers are supported
-    // if ('serviceWorker' in navigator) {
-    //   // Use the window load event to keep the page load performant
-    //   window.addEventListener('load', () => {
-    //     navigator.serviceWorker.register('/service-worker.js');
-    //   });
-    // }
+    // Check that service workers are supported
+    if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
+    }
   </script>
 
 </body>
